test/positive/feature_arithmeticoperations.java

public class feature_arithmeticoperations {
  public feature_arithmeticoperations() {}
  public int m(int x) {
    return -2*x+87%x-(x/7);
  }
}

