test/negative/feature_dowhile.java

public class feature_dowhile {
  public feature_dowhile() {}
  public int m(int x) {
    int y = 0;
    do { x=x-1; } while (x>0);
    return x;
  }
}


